@@ -44,11 +44,17 @@ Hadoop. Currently supported values are:
 
 =over
 
-=item * "mapr-m3" - launch the job flow using MapR M3 Edition.
+=item *
 
-=item * "mapr-m5" - launch the job flow using MapR M5 Edition.
+"mapr-m3" - launch the job flow using MapR M3 Edition.
 
-=item * "mapr" with the user arguments specifying "--edition,m3" or
+=item *
+
+"mapr-m5" - launch the job flow using MapR M5 Edition.
+
+=item *
+
+"mapr" with the user arguments specifying "--edition,m3" or
 "--edition,m5" - launch the job flow using MapR M3 or M5 Edition,
 respectively.
 
