@@ -1,5 +1,6 @@
 package Paws::EMR::StepStatus;
   use Moose;
+  has FailureDetails => (is => 'ro', isa => 'Paws::EMR::FailureDetails');
   has State => (is => 'ro', isa => 'Str');
   has StateChangeReason => (is => 'ro', isa => 'Paws::EMR::StepStateChangeReason');
   has Timeline => (is => 'ro', isa => 'Paws::EMR::StepTimeline');
@@ -22,20 +23,26 @@ Each attribute should be used as a named argument in the calls that expect this 
 
 As an example, if Att1 is expected to be a Paws::EMR::StepStatus object:
 
-  $service_obj->Method(Att1 => { State => $value, ..., Timeline => $value  });
+  $service_obj->Method(Att1 => { FailureDetails => $value, ..., Timeline => $value  });
 
 =head3 Results returned from an API call
 
 Use accessors for each attribute. If Att1 is expected to be an Paws::EMR::StepStatus object:
 
   $result = $service_obj->Method(...);
-  $result->Att1->State
+  $result->Att1->FailureDetails
 
 =head1 DESCRIPTION
 
 The execution status details of the cluster step.
 
 =head1 ATTRIBUTES
+
+
+=head2 FailureDetails => L<Paws::EMR::FailureDetails>
+
+  The details for the step failure including reason, message, and log
+file path where the root cause was identified.
 
 
 =head2 State => Str
